--- a/templates/monitoring/alertmanager/alertmanager-email-config.tmpl
+++ b/templates/monitoring/alertmanager/alertmanager-email-config.tmpl
@@ -2,35 +2,35 @@
 {{ define "__alertmanagerURL" }}{{ .ExternalURL }}/#/alerts?receiver={{ .Receiver | urlquery }}{{ end }}
 
 {{/* custom subject template */}}
-{{ define "__intlysubject" }}
+{{ define "__intlysubject" -}}
 	
-	{{/* declaring variables */}}
-	{{ $lenOfAlerts := ( len .Alerts ) }} {{ $clustername := "${CLUSTER_NAME}"}} {{ $alertname := "" }} {{ $severity := "" }} {{ $ifCritical := "" }}
+	{{- /* declaring variables */ -}}
+	{{- $lenOfAlerts := ( len .Alerts ) }} {{ $clustername := "${CLUSTER_NAME}" }} {{ $alertname := "" }} {{ $severity := "" }} {{ $ifCritical := "" -}}
 
-  {{/* checking if there is single or multiple alerts */}}
-	{{if eq $lenOfAlerts 1 }} 
-		{{ $clustername }}|{{ .CommonLabels.alertname  }}|({{ .CommonLabels.severity | title }})|{{ .Status | title }}{{ if eq .Status "firing" }}{{ end }}
-	{{ else }}
-		{{if gt $lenOfAlerts 1 }} 
-			{{ $alertname = "Multiple Alerts*" }}
-			{{ if eq .CommonLabels.severity "critical" }} 
-				{{ $ifCritical = "true" }}
-			{{ else }}
-				{{ $severity = ( .CommonLabels.severity ) }} 
-			{{ end }}
-		{{ end }}
-	{{ end }}
+  {{- /* checking if there is single or multiple alerts */ -}}
+	{{- if eq $lenOfAlerts 1 -}} 
+		{{- $clustername }}|{{ .CommonLabels.alertname  }}|({{ .CommonLabels.severity | title }})|{{ .Status | title }}{{ if eq .Status "firing" }}{{ end -}}
+	{{- else -}}
+		{{- if gt $lenOfAlerts 1 -}} 
+			{{- $alertname = "Multiple Alerts*" -}}
+			{{- if eq .CommonLabels.severity "critical" -}} 
+				{{- $ifCritical = "true" -}}
+			{{- else -}}
+				{{- $severity = ( .CommonLabels.severity ) -}} 
+			{{- end -}}
+		{{- end -}}
+	{{- end -}}
 
-	{{/* in case of multiple alerts, checking if the severity of any alert(s) is critical*/}}
-	{{ if eq $alertname "Multiple Alerts*" }}
-		{{ if eq $ifCritical "true" }} 
-			{{ $clustername }}|{{ $alertname }}|(Critical)|{{ .Status | title }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}
-		{{ else }}
-			{{ $clustername }}|{{ $alertname }}|({{ $severity | title }})|{{ .Status | title }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}
-		{{ end }}
-	{{ end }}
+	{{- /* in case of multiple alerts, checking if the severity of any alert(s) is critical*/ -}}
+	{{- if eq $alertname "Multiple Alerts*" -}}
+		{{- if eq $ifCritical "true" -}} 
+			{{- $clustername }}|{{ $alertname }}|(Critical)|{{ .Status | title }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end -}}
+		{{- else -}}
+			{{- $clustername }}|{{ $alertname }}|({{ $severity | title }})|{{ .Status | title }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end -}}
+		{{- end -}}
+	{{- end -}}
 
-{{ end }}
+{{- end }}
 
 {{ define "__description" }}{{ end }}
  
